Fix 100vh on mobile issue.

--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
-body {
-    height: 100vh;
+* {
     margin: 0;
     padding: 0;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+html {
+    height: -webkit-fill-available;
+}
+
+body {
+    height: 100vh;
+    height: -webkit-fill-available;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-}
-
-h1, h2 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 0px;
 }
 
 h1 {
@@ -37,11 +41,14 @@ ul {
 .logo {
     max-height: 100px;
 }
+ .icon {
+    height: 32px;
+ }
 
 .top,
 .mid,
 .bot {
-    padding: 1rem;
+    padding: 2rem;
 }
 
 .mid,
@@ -88,5 +95,6 @@ ul {
 .button__icon {
     display: flex;
     align-items: center;
+    height: 100%;
     padding: 8px 16px;
 }
